src/objects/PF_Stories__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>Apex_Development_Status__c</fullName>
        <label>Apex Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Build &amp; Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>TEXT(PF_Percent_completed__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Description__c</fullName>
        <label>Configuration Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Config_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>There isn&apos;t trigger/apex code/vf page required but there may be integration required.</inlineHelpText>
        <label>Config Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is configuration is required (to be done by Functional Team).</description>
        <label>Configuration Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_Status_2__c</fullName>
        <label>Configuration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Build and Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Scope</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_hours__c</fullName>
        <label>Estimated hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Comments__c</fullName>
        <description>Comments supplied by the functional team</description>
        <inlineHelpText>Please enter any comments (e.g.; Requirement will be handled in another workstream)</inlineHelpText>
        <label>Functional Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functionality</label>
        <referenceTo>Functionality__c</referenceTo>
        <relationshipLabel>Related Requirements</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build &amp; Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PF_Backlog_Rank__c</fullName>
        <label>Backlog Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populate for &quot;Change Request&quot; , If raised from a defect.</inlineHelpText>
        <label>Defect</label>
        <referenceTo>PF_Defects__c</referenceTo>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_NameClean__c</fullName>
        <formula>SUBSTITUTE(Name, &apos;&quot;&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameClean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PF_Parent_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Story</label>
        <referenceTo>PF_Stories__c</referenceTo>
        <relationshipName>Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Percent_completed__c</fullName>
        <label>% completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PF_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Requestor__c</fullName>
        <label>Requestor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Sprint_Name__c</fullName>
        <formula>PF_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>PF_Sprints__c</referenceTo>
        <relationshipName>Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PF_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Story_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Story_Point__c</fullName>
        <label>Story Point</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Story_Status_Reason__c</fullName>
        <inlineHelpText>Please fill this if story status is Out of Scope, Duplicate or Cancelled</inlineHelpText>
        <label>Story Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PF_Story_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Eliminated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Story_Type__c</fullName>
        <label>Story Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <controllingField>PF_Story_Status__c</controllingField>
            <picklistValues>
                <fullName>Build Completed - Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build - Open Question/Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Out of Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Sign off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test - In Progress</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Config__c</fullName>
        <label>Type of Config</label>
        <picklist>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Types</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Processes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <formula>PF_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workstream</label>
        <type>Text</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>Functionality__c</columns>
        <columns>PF_Description__c</columns>
        <columns>NAME</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_stories_Done_WIP</fullName>
        <columns>NAME</columns>
        <columns>PF_Sprint_Name__c</columns>
        <columns>PF_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apex_Development_Status__c</field>
            <operation>contains</operation>
            <value>New,Build &amp; Review,Build Complete</value>
        </filters>
        <filters>
            <field>PF_Sprint_Name__c</field>
            <operation>equals</operation>
            <value>Contact Management</value>
        </filters>
        <label>All stories Done WIP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Backlog</fullName>
        <columns>PF_Sprint_Name__c</columns>
        <columns>NAME</columns>
        <columns>PF_Backlog_Rank__c</columns>
        <columns>PF_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Sprint_Name__c</field>
            <operation>contains</operation>
            <value>Backlog</value>
        </filters>
        <label>Backlog</label>
    </listViews>
    <listViews>
        <fullName>Config_Only</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>PF_Description__c</columns>
        <columns>NAME</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <columns>Config_Only__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Config_Only__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Config-Only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contact_Mgmt</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>PF_Title__c</columns>
        <columns>PF_Description__c</columns>
        <columns>NAME</columns>
        <columns>PF_Start_Date__c</columns>
        <columns>PF_End_Date__c</columns>
        <columns>Config_Only__c</columns>
        <columns>Functionality__c</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Sprint__c</field>
            <operation>equals</operation>
            <value>Contact Management</value>
        </filters>
        <label>Contact Mgmt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>General_Setup</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>NAME</columns>
        <columns>PF_Title__c</columns>
        <columns>PF_Description__c</columns>
        <columns>Config_Only__c</columns>
        <columns>Functionality__c</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Sprint__c</field>
            <operation>equals</operation>
            <value>General Setup</value>
        </filters>
        <label>General Setup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HB_Contact_Management</fullName>
        <columns>NAME</columns>
        <columns>PF_Story_Status__c</columns>
        <columns>PF_Description__c</columns>
        <columns>Config_Only__c</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workstream__c</field>
            <operation>equals</operation>
            <value>Contact Management</value>
        </filters>
        <filters>
            <field>PF_Story_Status__c</field>
            <operation>notEqual</operation>
            <value>6-Eliminated</value>
        </filters>
        <label>HB - Contact Management</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>INV_SPK</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>Functionality__c</columns>
        <columns>PF_Description__c</columns>
        <columns>PF_Start_Date__c</columns>
        <columns>PF_End_Date__c</columns>
        <columns>NAME</columns>
        <columns>PF_Title__c</columns>
        <columns>Config_Only__c</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Sprint__c</field>
            <operation>contains</operation>
            <value>Speaker</value>
        </filters>
        <label>Investment Speaker</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MFS</fullName>
        <columns>NAME</columns>
        <columns>PF_Description__c</columns>
        <columns>PF_Story_Status__c</columns>
        <columns>PF_Start_Date__c</columns>
        <columns>PF_End_Date__c</columns>
        <columns>Config_Only__c</columns>
        <columns>PF_Percent_completed__c</columns>
        <columns>PF_Story_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Story_Owner__c</field>
            <operation>contains</operation>
            <value>Jata,Mahesh,Manoj,Gyanendra,Priya</value>
        </filters>
        <label>MFS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Oppty_Mgmt</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>Functionality__c</columns>
        <columns>PF_Description__c</columns>
        <columns>NAME</columns>
        <columns>PF_Start_Date__c</columns>
        <columns>PF_End_Date__c</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>PF_Title__c</columns>
        <columns>Config_Only__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Sprint__c</field>
            <operation>contains</operation>
            <value>Opportunity</value>
        </filters>
        <label>Oppty Mgmt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Org_Mgmt</fullName>
        <columns>PF_Sprint__c</columns>
        <columns>NAME</columns>
        <columns>PF_Title__c</columns>
        <columns>PF_Description__c</columns>
        <columns>Config_Only__c</columns>
        <columns>Functionality__c</columns>
        <columns>Configuration_Status_2__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Apex_Development_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PF_Sprint__c</field>
            <operation>contains</operation>
            <value>Org</value>
        </filters>
        <filters>
            <field>Configuration_Status_2__c</field>
            <operation>notEqual</operation>
            <value>Not in Scope</value>
        </filters>
        <label>Org Mgmt</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STY-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PF_Start_End_date_check</fullName>
        <active>true</active>
        <description>Start date cannot be greater than End date</description>
        <errorConditionFormula>PF_Start_Date__c &gt; PF_End_Date__c</errorConditionFormula>
        <errorMessage>Start date cannot be greater than End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StoryStatusReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISPICKVAL( PF_Story_Status__c , &apos;Out of Scope&apos;) ,ISPICKVAL( PF_Story_Status__c , &apos;Duplicate&apos;),ISPICKVAL( PF_Story_Status__c , &apos;Cancelled&apos;)) ,  ISBLANK( PF_Story_Status_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>PF_Story_Status_Reason__c</errorDisplayField>
        <errorMessage>Please enter Story Status Reason when Story Status is Out of Scope or Duplicate or Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Story_dates_lies_between_Sprint</fullName>
        <active>false</active>
        <description>Story Start/End dates should lie within Sprint Start/end dates</description>
        <errorConditionFormula>(PF_Start_Date__c &lt; PF_Sprint__r.PF_Start_Date__c ) || 
(PF_End_Date__c &gt; PF_Sprint__r.PF_End_Date__c )</errorConditionFormula>
        <errorMessage>Story Start/End dates should lie within Sprint Start/end dates</errorMessage>
    </validationRules>
</CustomObject>